--- a/03_FRAMEWORKS/WEB_DEVELOPMENT/REACTIVE_NATIVE/mobile-confusion/package.json
+++ b/03_FRAMEWORKS/WEB_DEVELOPMENT/REACTIVE_NATIVE/mobile-confusion/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "react-native-community/datetimepicker",
     "@react-native-community/masked-view": "0.1.10",
-    "expo": "~38.0.8",
+    "expo": "~38.0.0",
+    "expo-secure-store": "~9.0.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
@@ -31,6 +32,7 @@
     "react-redux": "5.0.7",
     "redux": "4.0.0",
     "redux-logger": "3.0.6",
+    "redux-persist": "5.9.1",
     "redux-thunk": "2.2.0"
   },
   "devDependencies": {
