--- a/03_FRAMEWORKS/WEB_DEVELOPMENT/REACTIVE_NATIVE/mobile-confusion/package.json
+++ b/03_FRAMEWORKS/WEB_DEVELOPMENT/REACTIVE_NATIVE/mobile-confusion/package.json
@@ -11,6 +11,9 @@
     "@react-native-community/datetimepicker": "react-native-community/datetimepicker",
     "@react-native-community/masked-view": "0.1.10",
     "expo": "~38.0.0",
+    "expo-image-picker": "~8.3.0",
+    "expo-mail-composer": "~8.2.1",
+    "expo-permissions": "~9.0.1",
     "expo-secure-store": "~9.0.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
@@ -21,13 +24,16 @@
     "react-native-elements": "^2.0.4",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-modal-datetime-picker": "^8.7.1",
+    "react-native-netinfo": "^1.1.0",
+    "react-native-photo-manipulator": "^1.2.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
-    "react-native-safe-area-view": "0.7.0",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~2.9.0",
     "react-native-swipeout": "2.3.3",
     "react-native-web": "~0.11.7",
     "react-navigation": "2.0.1",
+    "react-navigation-drawer": "^2.5.0",
     "react-navigation-stack": "^2.8.2",
     "react-redux": "5.0.7",
     "redux": "4.0.0",
